--- a/2.5D Level Editor/2.5D Level Editor.csproj
+++ b/2.5D Level Editor/2.5D Level Editor.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GameManagment\SpriteSheet.cs" />
     <Compile Include="GameManagment\TextGameObject.cs" />
     <Compile Include="States\EditorState.cs" />
+    <Compile Include="States\SelectionState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
