--- a/2.5D Level Editor/2.5D Level Editor.csproj
+++ b/2.5D Level Editor/2.5D Level Editor.csproj
@@ -65,6 +65,7 @@
     <Compile Include="GameObjects\ItemGrid.cs" />
     <Compile Include="GameObjects\LevelGrid.cs" />
     <Compile Include="GameObjects\EditorMouse.cs" />
+    <Compile Include="GameObjects\Tiles\GrassTile.cs" />
     <Compile Include="GameObjects\Tiles\Tile.cs" />
     <Compile Include="GameObjects\Tiles\TreeTile.cs" />
     <Compile Include="GameObjects\Tiles\WallTile.cs" />
